--- a/example/gap_junctions/CMakeLists.txt
+++ b/example/gap_junctions/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(gap_junctions gap_junctions.cpp)
 
-target_link_libraries(gap_junctions PRIVATE arbor arbor-aux ext-json)
+target_link_libraries(gap_junctions PRIVATE arbor arbor-sup ext-json)
