mitral cell example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(generators)
 add_subdirectory(brunel)
 add_subdirectory(bench)
 add_subdirectory(ring)
+add_subdirectory(mitral)
 add_subdirectory(gap_junctions)
