fully automate mpi4py support

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -31,6 +31,15 @@ add_library(pyarb MODULE
 target_link_libraries(pyarb PRIVATE arbor pybind11::module)
 set_target_properties(pyarb PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}" SUFFIX "${PYTHON_MODULE_EXTENSION}")
 
+# Add support for mpi4py if available.
+if (ARB_WITH_MPI)
+    find_python_module(mpi4py)
+    if (HAVE_MPI4PY)
+        target_include_directories(pyarb PRIVATE "${PY_MPI4PY}/include")
+        target_compile_definitions(pyarb PRIVATE -DARB_WITH_MPI4PY)
+    endif()
+endif()
+
 # Required to avoid warnings from the linker:
 #       "caused by different translation units being compiled with different visibility settings"
 # Adding this here makes pyarb link without warnings, however it generates warnings for anything else that links against libarbor.
