--- a/cmake/arbor-config.cmake.in
+++ b/cmake/arbor-config.cmake.in
@@ -15,3 +15,20 @@ foreach(component ${arbor_FIND_COMPONENTS})
     endif()
 endforeach()
 
+# Patch properties to remove unnecessary external CUDA dependencies.
+
+set(_override_lang @arbor_override_import_lang@)
+if(_override_lang)
+    set_target_properties(arbor::arbor PROPERTIES IMPORTED_LINK_INTERFACE_LANGUAGES_@arbor_build_config@ "${_override_lang}")
+endif()
+
+set(_add_libs @arbor_add_import_libs@)
+if(_add_libs)
+    get_target_property(_arbor_interface_libs arbor::arbor INTERFACE_LINK_LIBRARIES)
+    if(_arbor_interface_libs)
+        list(APPEND _arbor_interface_libs ${_add_libs})
+    else()
+        set(_arbor_interface_libs ${_add_libs})
+    endif()
+    set_target_properties(arbor::arbor PROPERTIES INTERFACE_LINK_LIBRARIES "${_arbor_interface_libs}")
+endif()
