add find_gpu to sup: no fancy logic yest

--- a/sup/CMakeLists.txt
+++ b/sup/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(sup-sources
-
+    affinity.cpp
+    concurrency.cpp
     glob.cpp
+    gpu.cpp
     ioutil.cpp
     json_meter.cpp
     path.cpp
