--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(generators)
 add_subdirectory(brunel)
 add_subdirectory(bench)
 add_subdirectory(ring)
+add_subdirectory(gap_junctions)
