--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -9,4 +9,4 @@ add_subdirectory(brunel)
 add_subdirectory(bench)
 add_subdirectory(ring)
 add_subdirectory(gap_junctions)
-add_subdirectory(test)
+add_subdirectory(gj_network)
