--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -101,6 +101,7 @@ set(unit_sources
     test_spike_emitter.cpp
     test_stats.cpp
     test_strprintf.cpp
+    test_supercell.cpp
     test_swcio.cpp
     test_synapses.cpp
     test_thread.cpp
