Split out 'arborenv' as an installable library from the sup library. (#679)
Make a new installed library `libarborenv.a` covering a subset of the `sup` library functionality, with corresponding installed CMake target `arbor::arborenv`.

* Move NVML or CUDA 10 API decision for GPU UUID discovery to top level CMake.
* Move affinity, concurrency, MPI init guard, and gpu detection and negotiation functionality out of `sup` and into new library `arborenv`.
* Move `include/arbor` in project tree to `arbor/include/arbor` (for consistency across `sup`, `arbor`, and `arborenv` subdirectories.)
* Wrangle more explicit library dependency adding CMake code into the installed `arbor-config.cmake`, to help mitigate [CMake issue #18614](https://gitlab.kitware.com/cmake/cmake/issues/18614).
* Have `arborenv` code throw `std::runtime_exception` instead of `arb::arbor_error`. (We are still using `arb::mpi_error` though for a failure in `with_mpi`.)
* Move `scope_exit` into the `arb::util` namespace.
* Merge `affinity.hpp` into `concurrency.hpp`.
* Rename `gpu.hpp` to `gpu_env.hpp` in `arborenv` includes.

Fixes #647.

--- a/cmake/arbor-config.cmake.in
+++ b/cmake/arbor-config.cmake.in
@@ -19,16 +19,25 @@ endforeach()
 
 set(_override_lang @arbor_override_import_lang@)
 if(_override_lang)
-    set_target_properties(arbor::arbor PROPERTIES IMPORTED_LINK_INTERFACE_LANGUAGES_@arbor_build_config@ "${_override_lang}")
+    foreach(target arbor::arbor arbor::arborenv)
+        set_target_properties(${target} PROPERTIES IMPORTED_LINK_INTERFACE_LANGUAGES_@arbor_build_config@ "${_override_lang}")
+    endforeach()
 endif()
 
-set(_add_libs @arbor_add_import_libs@)
-if(_add_libs)
-    get_target_property(_arbor_interface_libs arbor::arbor INTERFACE_LINK_LIBRARIES)
-    if(_arbor_interface_libs)
-        list(APPEND _arbor_interface_libs ${_add_libs})
+# Explicitly add extra link libraries not covered by dependencies above.
+# (See though arbor-sim/arbor issue #678).
+
+function(_append_property target property)
+    set(p_append ${ARGN})
+    get_target_property(p ${target} ${property})
+    if(p)
+        list(APPEND p ${p_append})
     else()
-        set(_arbor_interface_libs ${_add_libs})
+        set(interface_libs ${p_append})
     endif()
-    set_target_properties(arbor::arbor PROPERTIES INTERFACE_LINK_LIBRARIES "${_arbor_interface_libs}")
-endif()
+    set_target_properties(${target} PROPERTIES ${property} "${p}")
+endfunction()
+
+_append_property(arbor::arbor INTERFACE_LINK_LIBRARIES @arbor_add_import_libs@)
+_append_property(arbor::arborenv INTERFACE_LINK_LIBRARIES @arborenv_add_import_libs@)
+
