--- a/sup/CMakeLists.txt
+++ b/sup/CMakeLists.txt
@@ -1,9 +1,16 @@
 set(sup-sources
-    glob.cpp
+    glob_basic.cpp
     ioutil.cpp
     json_meter.cpp
     path.cpp
 )
+
+if(ARB_USE_POSIX_GLOB)
+    list(APPEND sup-sources glob_posix.cpp)
+else()
+    list(APPEND sup-sources glob_basic_wrap.cpp)
+endif()
+
 
 add_library(arbor-sup ${sup-sources})
 
