--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,12 @@ option(ARB_WITH_ASSERTIONS "enable arb_assert() assertions in code" OFF)
 
 
 #----------------------------------------------------------
+# Python front end for Arbor:
+#----------------------------------------------------------
+
+option(ARB_WITH_PYTHON "enable Python front end" OFF)
+
+#----------------------------------------------------------
 # Global CMake configuration
 #----------------------------------------------------------
 
@@ -177,6 +183,15 @@ if(ARB_WITH_PROFILING)
 endif()
 if(ARB_WITH_ASSERTIONS)
     target_compile_definitions(arbor-config-defs INTERFACE ARB_HAVE_ASSERTIONS)
+endif()
+
+# Python bindings
+#----------------------------------------------------------
+option(ARB_WITH_PYTHON "enable python front end" OFF)
+if(ARB_WITH_PYTHON)
+    # Required to link the dynamic libraries for python modules.
+    # Effectively adds '-fpic' flag to CXX_FLAGS.
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif()
 
 # Threading model
@@ -354,7 +369,7 @@ add_subdirectory(arborenv)
 # unit, unit-mpi, unit-local, unit-modcc, validate
 add_subdirectory(test)
 
-# miniapp, brunel-minapp, event-gen 
+# miniapp, brunel-minapp, event-gen:
 add_subdirectory(example)
 
 # lmorpho:
@@ -365,8 +380,13 @@ add_subdirectory(doc)
 
 # validation-data:
 if(ARB_BUILD_VALIDATION_DATA)
-    add_subdirectory(validation) # validation-data
+    add_subdirectory(validation)
 endif()
+
+# python interface:
+if (ARB_WITH_PYTHON)
+    add_subdirectory(python)
+endif ()
 
 #----------------------------------------------------------
 # Generate CMake config/version files for install.
