Remove the miniapp example
* remove the miniapp source from example/miniapp
* remove references to miniapp from CMake files
* remove miniapp from the travis tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -369,7 +369,7 @@ add_subdirectory(arborenv)
 # unit, unit-mpi, unit-local, unit-modcc, validate
 add_subdirectory(test)
 
-# miniapp, brunel-minapp, event-gen:
+# self contained examples:
 add_subdirectory(example)
 
 # lmorpho:
