added python tests (serial, mpi) for linux,gcc config

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-osx-gcc WITH_DISTRIBUTED=serial
     compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
@@ -25,7 +25,7 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-osx-gcc WITH_DISTRIBUTED=mpi
     compiler: gcc-6
 
 ## test clang9 - single node/rank with threading backend ##
@@ -34,7 +34,7 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-osx-clang WITH_DISTRIBUTED=serial
     compiler: clang
 
 ## test clang9 - mpi with threading backend ##
@@ -43,7 +43,7 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-osx-clang WITH_DISTRIBUTED=mpi
     compiler: clang
 
 ######################### LINUX #########################
@@ -61,7 +61,7 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-linux-gcc WITH_DISTRIBUTED=serial
     compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
@@ -78,7 +78,7 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-linux-gcc WITH_DISTRIBUTED=mpi
     compiler: gcc-6
 
 ## test clang4 - single node/rank with threading backend ##
@@ -97,7 +97,7 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-linux-clang WITH_DISTRIBUTED=serial
     compiler: clang-4.0
 
 ## test clang4 - mpi with threading backend ##
@@ -116,8 +116,53 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-linux-clang WITH_DISTRIBUTED=mpi
     compiler: clang-4.0
+
+## test python: gcc6 - single node ##
+  - name: "python, linux, gcc, serial"
+     os: linux
+     dist: trusty
+     python: 3.6.8
+     addons:
+       apt:
+         sources:
+           - ubuntu-toolchain-r-test
+         packages:
+           - g++-6
+           - openmpi-bin
+           - libopenmpi-dev
+           - python-argparse
+           - python-os
+           - python-sys
+           - python-unittest
+     env:
+       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+       - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on
+     compiler: gcc-6
+
+## test python: gcc6 - mpi ##
+  - name: "python, linux, gcc, mpi"
+     os: linux
+     dist: trusty
+     python: 3.6.8
+     addons:
+       apt:
+         sources:
+           - ubuntu-toolchain-r-test
+         packages:
+           - g++-6
+           - openmpi-bin
+           - libopenmpi-dev
+           - python-argparse
+           - python-os
+           - python-sys
+           - python-unittest
+           - python-mpi4py
+     env:
+       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+       - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on
+     compiler: gcc-6
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
