included pyenv global

--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,7 @@ matrix:
   - name: "python, linux, gcc, serial"
     os: linux
     dist: trusty
-    python: 3.6.8
+    python: 3.6.6
     addons:
       apt:
         sources:
@@ -141,7 +141,7 @@ matrix:
   - name: "python, linux, gcc, mpi"
     os: linux
     dist: trusty
-    python: 3.6.8
+    python: 3.6.6
     addons:
       apt:
         sources:
@@ -159,6 +159,7 @@ matrix:
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
   - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
+  - if [[ "$WITH_PYTHON" == "on"]]; then pyenv global system 3.6; fi
   - eval "${MATRIX_EVAL}"
 
 script: source ./scripts/travis/build.sh
