WIP: fix python testing, mpi4py

--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,7 @@ matrix:
   - name: "python, linux, gcc, serial"
     os: linux
     dist: trusty
-    python: 3.6.6
+    python: 3.6
     addons:
       apt:
         sources:
@@ -134,14 +134,14 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on
+      - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on PY=3
     compiler: gcc-6
 
 ## test python: gcc6 - mpi ##
   - name: "python, linux, gcc, mpi"
     os: linux
     dist: trusty
-    python: 3.6.6
+    python: 3.6
     addons:
       apt:
         sources:
@@ -153,13 +153,13 @@ matrix:
           - python-mpi4py
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on
+      - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3
     compiler: gcc-6
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
   - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
-  - if [[ "$WITH_PYTHON" == "on" ]]; then pyenv global system 3.6; fi
+  - if [[ "$WITH_PYTHON" == "on" ]]; then pyenv global system 3.6; python$PY --version; fi
   - eval "${MATRIX_EVAL}"
 
 script: source ./scripts/travis/build.sh
