--- a/.travis.yml
+++ b/.travis.yml
@@ -132,6 +132,7 @@ matrix:
           - g++-6
           - openmpi-bin
           - libopenmpi-dev
+          - python3
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on PY=3
@@ -150,7 +151,8 @@ matrix:
           - g++-6
           - openmpi-bin
           - libopenmpi-dev
-          - python-mpi4py
+          - python3
+          - python3-mpi4py
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3
