--- a/.travis.yml
+++ b/.travis.yml
@@ -134,7 +134,7 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on PY=3
+      - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on PY=3.6
     compiler: gcc-6
 
 ## test python: gcc6 - mpi ##
@@ -153,13 +153,15 @@ matrix:
           - python3-mpi4py
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3
+      - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3.6
     compiler: gcc-6
+
+before_install:
+  - if [[ "$WITH_PYTHON" == "on" ]]; then pyenv global system 3.6; source ~/virtualenv/python3.6/bin/activate; python$PY --version; fi
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
   - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
-  - if [[ "$WITH_PYTHON" == "on" ]]; then pyenv global system 3.6; source ~/virtualenv/python3.6/bin/activate; python$PY --version; fi
   - eval "${MATRIX_EVAL}"
 
 script: source ./scripts/travis/build.sh
